Add list of confirmed attendees

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">This is a <strong>hacking oriented</strong> invitation-only event. If you want to attend you can <a href="mailto:hackfest@webengineshackfest.org">request an invitation</a>.</p>
                                     <p class="text-muted">The event involves members from all parts of the Web Platform community, including those who work on Chromium/Blink, WebKit, Firefox/Gecko and Servo.</p>
+                                    <p class="text-muted">Check the list of <a href="#attendees">confirmed attendees</a> for more details.</p>
                                 </div>
                             </div>
                         </li>
@@ -245,8 +246,82 @@
                         <h4><a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">Cluttering WebKitGTK+</a></h4>
                         <p class="text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
                     </div>
-			</div>
+                </div>
         </div>
+    </section>
+
+    <!-- Attendees Section -->
+    <section id="attendees">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Attendees</h2>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Apple</strong>, <strong>ARM</strong>, <strong>Collabora</strong>, <strong>Continental</strong>, <strong>CoSMo Software</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Intel</strong>, <strong>LG</strong>, <strong>Mozilla</strong>, <strong>Red Hat</strong>, <strong>Samsung</strong> and <strong>Sony</strong>.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <ul>
+                    <div class="col-sm-4">
+                        <li>Adenilson Cavalcanti <a href="https://twitter.com/adenilsonc" title="@adenilsonc"><i class="fa fa-twitter"></i></a></li>
+                        <li>Adrián Pérez de Castro <a href="https://twitter.com/aperezdc" title="@aperezdc"><i class="fa fa-twitter"></i></a></li>
+                        <li>Alejandro G. Castro <a href="https://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a></li>
+                        <li>Alexandre Gouaillard <a href="https://twitter.com/agouaillard" title="@agouaillard"><i class="fa fa-twitter"></i></a></li>
+                        <li>Alicia Boya</li>
+                        <li>Antonio Gomes <a href="https://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a></li>
+                        <li>Behdad Esfahbod <a href="https://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></li>
+                        <li>Caitlin Potter <a href="https://twitter.com/caitpiggy" title="@caitpiggy"><i class="fa fa-twitter"></i></a></li>
+                        <li>Carlos García Campos</li>
+                        <li>Carlos López <a href="https://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
+                        <li>Charlie Turner</li>
+                        <li>Claudio Saavedra <a href="https://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
+                        <li>Daniel Ehrenberg <a href="https://twitter.com/littledan" title="@littledan"><i class="fa fa-twitter"></i></a></li>
+                        <li>Don Olmstead <a href="https://twitter.com/don_olmstead" title="@don_olmstead"><i class="fa fa-twitter"></i></a></li>
+                        <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
+                        <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                    <div class="col-sm-4">
+                        <li>Enrique Ocaña González <a href="https://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
+                        <li>Frédéric Wang</li>
+                        <li>Guillaume Emont <a href="https://twitter.com/guijemont" title="@guijemont"><i class="fa fa-twitter"></i></a></li>
+                        <li>Gustavo Noronha <a href="https://twitter.com/gnomekov" title="@gnomekov"><i class="fa fa-twitter"></i></a></li>
+                        <li>Gwangyeung Moon</li>
+                        <li>Gyuyoung Kim <a href="https://twitter.com/gyuyoung_kim" title="@gyuyoung_kim"><i class="fa fa-twitter"></i></a></li>
+                        <li>Henrique Ferreiro <a href="https://twitter.com/hferreiro" title="@hferreiro"><i class="fa fa-twitter"></i></a></li>
+                        <li>Jacobo Aragunde <a href="https://twitter.com/JacoboAragunde" title="@JacoboAragunde"><i class="fa fa-twitter"></i></a></li>
+                        <li>Jani Hautakangas</li>
+                        <li>Javier Fernández <a href="https://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
+                        <li>Joanmarie Diggs <a href="https://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
+                        <li>José Dapena Paz</li>
+                        <li>Josh Wolfe</li>
+                        <li>Julien Isorce</li>
+                        <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
+                        <li>Maksim Sisov</li>
+                    </div>
+                    <div class="col-sm-4">
+                        <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
+                        <li>Martin Robinson <a href="https://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
+                        <li>Michael Catanzaro</li>
+                        <li>Michael Unisaer</li>
+                        <li>Miguel Gómez</li>
+                        <li>Philip Jägenstedt <a href="https://twitter.com/foolip" title="@foolip"><i class="fa fa-twitter"></i></a></li>
+                        <li>Raphael Kubo da Costa</li>
+                        <li>Robert Kroeger <a href="https://twitter.com/robkroeger" title="@robkroeger"><i class="fa fa-twitter"></i></a></li>
+                        <li>Sergio Villar <a href="https://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
+                        <li>Tomas Popela</li>
+                        <li>Tomeu Vizoso <a href="https://twitter.com/tomeuv" title="@tomeuv"><i class="fa fa-twitter"></i></a></li>
+                        <li>Xabier Rodríguez Calvar <a href="https://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
+                        <li>Xan López</li>
+                        <li>Youenn Fablet</li>
+                        <li>Yusuke Suzuki <a href="https://twitter.com/Constellation" title="@Constellation"><i class="fa fa-twitter"></i></a></li>
+                        <li>Žan Dobersek <a href="https://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                </ul>
+            </div>
+            <div class="row" style="margin-top: 2em;">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">We still have room for more people! If you want to attend <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</p>
+                </div>
+            </div>
     </section>
 
     <!-- Venue Section -->
@@ -486,8 +561,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-							<h2>Servo: Today & Tomorrow</h2>
-							<p class="item-intro text-muted">by Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></p>
+                        	<h2>Servo: Today & Tomorrow</h2>
+                        	<p class="item-intro text-muted">by Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></p>
                             <iframe width="640" height="360" src="https://www.youtube.com/embed/UGl9VVIOo3E?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
                                 <li>Video: <a href="https://youtu.be/UGl9VVIOo3E?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
@@ -518,8 +593,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-							<h2>Ten Years of HarfBuzz</h2>
-							<p class="item-intro text-muted">by Behdad Esfahbod <a href="http://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></p>
+                        	<h2>Ten Years of HarfBuzz</h2>
+                        	<p class="item-intro text-muted">by Behdad Esfahbod <a href="http://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></p>
                             <iframe width="640" height="360" src="https://www.youtube.com/embed/T79LMEXkf9w?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
                                 <li>Video: <a href="https://youtu.be/T79LMEXkf9w?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
@@ -550,8 +625,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-							<h2>Fetching Bytes and Words on the Web</h2>
-							<p class="item-intro text-muted">by Youenn Fablet</p>
+                        	<h2>Fetching Bytes and Words on the Web</h2>
+                        	<p class="item-intro text-muted">by Youenn Fablet</p>
                             <iframe width="640" height="360" src="https://www.youtube.com/embed/hJoxO4_fwWY?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
                                 <li>Video: <a href="https://youtu.be/hJoxO4_fwWY?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
@@ -582,8 +657,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-							<h2>From "WebKit for Wayland" to WPE</h2>
-							<p class="item-intro text-muted">by Žan Doberšek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></p>
+                        	<h2>From "WebKit for Wayland" to WPE</h2>
+                        	<p class="item-intro text-muted">by Žan Doberšek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></p>
                             <iframe width="640" height="360" src="https://www.youtube.com/embed/LI8jQEcFsbk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
                                 <li>Video: <a href="https://youtu.be/LI8jQEcFsbk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
@@ -613,8 +688,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-							<h2>Cluttering WebKitGTK+</h2>
-							<p class="item-intro text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
+                        	<h2>Cluttering WebKitGTK+</h2>
+                        	<p class="item-intro text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
                             <iframe width="640" height="360" src="https://www.youtube.com/embed/PKVFwxbtAOk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
                                 <li>Video: <a href="https://youtu.be/PKVFwxbtAOk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
