--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Apple</strong>, <strong>ARM</strong>, <strong>Collabora</strong>, <strong>Continental</strong>, <strong>CoSMo Software</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Intel</strong>, <strong>LG</strong>, <strong>Mozilla</strong>, <strong>Red Hat</strong>, <strong>Samsung</strong> and <strong>Sony</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Apple</strong>, <strong>ARM</strong>, <strong>Collabora</strong>, <strong>Continental</strong>, <strong>CoSMo Software</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Intel</strong>, <strong>LG</strong>, <strong>Mozilla</strong>, <strong>Red Hat</strong>, <strong>Samsung</strong>, <strong>SoftAtHome</strong> and <strong>Sony</strong>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -269,6 +269,7 @@
                         <li>Alicia Boya</li>
                         <li>Antonio Gomes <a href="https://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a></li>
                         <li>Behdad Esfahbod <a href="https://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></li>
+                        <li>Caio Lima</li>
                         <li>Caitlin Potter <a href="https://twitter.com/caitpiggy" title="@caitpiggy"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos García Campos</li>
                         <li>Carlos López <a href="https://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
@@ -296,13 +297,14 @@
                         <li>Julien Isorce</li>
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
                         <li>Maksim Sisov</li>
+                        <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="https://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
                         <li>Michael Catanzaro</li>
                         <li>Michael Unisaer</li>
                         <li>Miguel Gómez</li>
+                        <li>Olivier Blin</li>
                         <li>Philip Jägenstedt <a href="https://twitter.com/foolip" title="@foolip"><i class="fa fa-twitter"></i></a></li>
                         <li>Raphael Kubo da Costa</li>
                         <li>Robert Kroeger <a href="https://twitter.com/robkroeger" title="@robkroeger"><i class="fa fa-twitter"></i></a></li>
