--- a/index.html
+++ b/index.html
@@ -276,11 +276,12 @@
                         <li>Charlie Turner</li>
                         <li>Claudio Saavedra <a href="https://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
                         <li>Daniel Ehrenberg <a href="https://twitter.com/littledan" title="@littledan"><i class="fa fa-twitter"></i></a></li>
+                        <li>Diego F. Goberna<a href="https://twitter.com/feiss" title="@feiss"><i class="fa fa-twitter"></i></a></li>
                         <li>Don Olmstead <a href="https://twitter.com/don_olmstead" title="@don_olmstead"><i class="fa fa-twitter"></i></a></li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
-                        <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="https://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                         <li>Frédéric Wang</li>
                         <li>Guillaume Emont <a href="https://twitter.com/guijemont" title="@guijemont"><i class="fa fa-twitter"></i></a></li>
@@ -297,9 +298,9 @@
                         <li>Julien Isorce</li>
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
                         <li>Maksim Sisov</li>
-                        <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="https://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
                         <li>Michael Catanzaro</li>
                         <li>Michael Unisaer</li>
