Update atenddees list

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Apple</strong>, <strong>ARM</strong>, <strong>Collabora</strong>, <strong>Continental</strong>, <strong>CoSMo Software</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Intel</strong>, <strong>LG</strong>, <strong>Mozilla</strong>, <strong>Red Hat</strong>, <strong>Samsung</strong>, <strong>SoftAtHome</strong> and <strong>Sony</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Apple</strong>, <strong>ARM</strong>, <strong>Centricular</strong>, <strong>Collabora</strong>, <strong>Continental</strong>, <strong>CoSMo Software</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Intel</strong>, <strong>LG</strong>, <strong>Mozilla</strong>, <strong>Red Hat</strong>, <strong>Samsung</strong>, <strong>SoftAtHome</strong> and <strong>Sony</strong>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -277,11 +277,12 @@
                         <li>Claudio Saavedra <a href="https://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
                         <li>Daniel Ehrenberg <a href="https://twitter.com/littledan" title="@littledan"><i class="fa fa-twitter"></i></a></li>
                         <li>Diego F. Goberna<a href="https://twitter.com/feiss" title="@feiss"><i class="fa fa-twitter"></i></a></li>
+                        <li>Diego Marcos</li>
                         <li>Don Olmstead <a href="https://twitter.com/don_olmstead" title="@don_olmstead"><i class="fa fa-twitter"></i></a></li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
+                        <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="https://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                         <li>Frédéric Wang</li>
                         <li>Guillaume Emont <a href="https://twitter.com/guijemont" title="@guijemont"><i class="fa fa-twitter"></i></a></li>
@@ -293,9 +294,11 @@
                         <li>Jani Hautakangas</li>
                         <li>Javier Fernández <a href="https://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="https://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
+                        <li>Jonathan Kew</li>
                         <li>José Dapena Paz</li>
                         <li>Josh Wolfe</li>
                         <li>Julien Isorce</li>
+                        <li>Kevin Ngo</li>
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
                         <li>Maksim Sisov</li>
                     </div>
@@ -309,6 +312,7 @@
                         <li>Philip Jägenstedt <a href="https://twitter.com/foolip" title="@foolip"><i class="fa fa-twitter"></i></a></li>
                         <li>Raphael Kubo da Costa</li>
                         <li>Robert Kroeger <a href="https://twitter.com/robkroeger" title="@robkroeger"><i class="fa fa-twitter"></i></a></li>
+                        <li>Sebastian Dröge<a href="https://twitter.com/sdroege_" title="@sdroege_"><i class="fa fa-twitter"></i></a></li>
                         <li>Sergio Villar <a href="https://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
                         <li>Tomas Popela</li>
                         <li>Tomeu Vizoso <a href="https://twitter.com/tomeuv" title="@tomeuv"><i class="fa fa-twitter"></i></a></li>
