--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                         <li>Don Olmstead <a href="https://twitter.com/don_olmstead" title="@don_olmstead"><i class="fa fa-twitter"></i></a></li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
+                        <li>Enrique Ocaña González <a href="https://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Enrique Ocaña González <a href="https://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                         <li>Frédéric Wang</li>
                         <li>Guillaume Emont <a href="https://twitter.com/guijemont" title="@guijemont"><i class="fa fa-twitter"></i></a></li>
                         <li>Gustavo Noronha <a href="https://twitter.com/gnomekov" title="@gnomekov"><i class="fa fa-twitter"></i></a></li>
@@ -301,17 +301,20 @@
                         <li>Kevin Ngo</li>
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
                         <li>Maksim Sisov</li>
-                    </div>
-                    <div class="col-sm-4">
                         <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="https://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                    <div class="col-sm-4">
                         <li>Michael Catanzaro</li>
                         <li>Michael Unisaer</li>
                         <li>Miguel Gómez</li>
                         <li>Olivier Blin</li>
                         <li>Philip Jägenstedt <a href="https://twitter.com/foolip" title="@foolip"><i class="fa fa-twitter"></i></a></li>
+                        <li>Philippe Normand <a href="https://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
                         <li>Raphael Kubo da Costa</li>
                         <li>Robert Kroeger <a href="https://twitter.com/robkroeger" title="@robkroeger"><i class="fa fa-twitter"></i></a></li>
+                        <li>Salvador de la Puente<a href="https://twitter.com/salvadelapuente" title="@salvadelapuente"><i class="fa fa-twitter"></i></a></li>
+                        <li>Santosh Mahto</li>
                         <li>Sebastian Dröge<a href="https://twitter.com/sdroege_" title="@sdroege_"><i class="fa fa-twitter"></i></a></li>
                         <li>Sergio Villar <a href="https://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
                         <li>Tomas Popela</li>
