Update attendees list

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <li>Claudio Saavedra <a href="https://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
                         <li>Daniel Ehrenberg <a href="https://twitter.com/littledan" title="@littledan"><i class="fa fa-twitter"></i></a></li>
                         <li>Diego F. Goberna <a href="https://twitter.com/feiss" title="@feiss"><i class="fa fa-twitter"></i></a></li>
-                        <li>Diego Marcos</li>
+                        <li>Diego Marcos <a href="https://twitter.com/dmarcos" title="@dmarcos"><i class="fa fa-twitter"></i></a></li>
                         <li>Don Olmstead <a href="https://twitter.com/don_olmstead" title="@don_olmstead"><i class="fa fa-twitter"></i></a></li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
@@ -299,7 +299,7 @@
                         <li>José Dapena Paz</li>
                         <li>Josh Wolfe</li>
                         <li>Julien Isorce</li>
-                        <li>Kevin Ngo</li>
+                        <li>Kevin Ngo <a href="https://twitter.com/andgokevin" title="@andgokevin"><i class="fa fa-twitter"></i></a></li>
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
                         <li>Maksim Sisov</li>
                         <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
