--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="https://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="https://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
+                        <li>Fernando Serrano <a href="https://twitter.com/fernandojsg" title="@fernandojsg"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
                         <li>Frédéric Wang</li>
@@ -297,6 +298,7 @@
                         <li>Joanmarie Diggs <a href="https://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>Jonathan Kew</li>
                         <li>José Dapena Paz</li>
+                        <li>Josh Matthews</li>
                         <li>Josh Wolfe</li>
                         <li>Kevin Ngo <a href="https://twitter.com/andgokevin" title="@andgokevin"><i class="fa fa-twitter"></i></a></li>
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
