Update airports information

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     <h4 class="service-heading">Fly to A Coruña (recommended)</h4>
                     <p class="text-muted text-left">A Coruña airport (LCG) is connected to Madrid, Barcelona, Lisboa, London/Heathrow.</p>
                     <p class="text-muted text-left">To get to the venue from A Coruña Airport, use the Airport-City Center Bus line (<a target="_blank" href="http://autoscalpita.com/tarifas-horarios/asc-linea-4051-coruna-puerta-real-vilaboa-aeropuerto/">Line 4051 Puerta Real - Aeropuerto.</a>) - Stop at Bus Station (Estación de Autobuses).</p>
-                    <p class="text-muted text-left"><a href="http://www.aena-aeropuertos.es/csee/Satellite/Aeropuerto-A-Coruna/en/Page/1056529998968/">Airport information</a>.</p>
+                    <p class="text-muted text-left"><a href="http://www.aena-aeropuertos.es/en/a-coruna-airport/airport-destinations.html">Airport information</a>.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -369,9 +369,9 @@
                         <i class="fa fa-plane fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Fly to Santiago</h4>
-                    <p class="text-muted text-left">Santiago airport (SCQ) is connected to Madrid, Barcelona, Brussels, Dublin, Frankfurt/Hahn, Istanbul, Geneva, Basel/Mulhouse, Geneva, Milan/Bergamo, Paris/CDG.</p>
+                    <p class="text-muted text-left">Santiago airport (SCQ) is connected to Madrid, Barcelona, Brussels, Dublin, Frankfurt, Istanbul, Geneva, Basel/Mulhouse, Geneva, Milan/Bergamo, Paris/CDG.</p>
                     <p class="text-muted text-left">About 50km from Coruña, it's a good option if you have a direct flight, but requires taking the bus to the Santiago train station and then the train to Coruña.</p>
-                    <p class="text-muted text-left"><a href="http://www.aena-aeropuertos.es/csee/Satellite/Aeropuerto-Santiago/en/Page/1056530002731/">Airport Information</a>.</p>
+                    <p class="text-muted text-left"><a href="http://www.aena-aeropuertos.es/en/santiago-airport/airport-destinations.html">Airport Information</a>.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
