Add Mozilla as hackfest sponsor

--- a/index.html
+++ b/index.html
@@ -441,6 +441,9 @@
                 <a href="https://www.igalia.com">
                     <img src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
                 </a>
+                <a href="https://www.mozilla.org">
+                    <img src="img/logos/logo-mozilla.png" title="Mozilla" alt="Mozilla Logo">
+                </a>
             </div>
         </div>
     </section>
