Update attendees info

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <li>Alicia Boya</li>
                         <li>Antonio Gomes <a href="https://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a></li>
                         <li>Behdad Esfahbod <a href="https://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></li>
-                        <li>Caio Lima</li>
+                        <li>Caio Lima <a href="https://twitter.com/caio_nepo" title="@caio_nepo"><i class="fa fa-twitter"></i></a></li>
                         <li>Caitlin Potter <a href="https://twitter.com/caitpiggy" title="@caitpiggy"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos García Campos</li>
                         <li>Carlos López <a href="https://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
