--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Apple</strong>, <strong>ARM</strong>, <strong>Centricular</strong>, <strong>Collabora</strong>, <strong>Continental</strong>, <strong>CoSMo Software</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Intel</strong>, <strong>LG</strong>, <strong>Mozilla</strong>, <strong>Red Hat</strong>, <strong>Samsung</strong>, <strong>SoftAtHome</strong> and <strong>Sony</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Apple</strong>, <strong>ARM</strong>, <strong>Centricular</strong>, <strong>Collabora</strong>, <strong>Continental</strong>, <strong>CoSMo Software</strong>, <strong>Endless</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Intel</strong>, <strong>LG</strong>, <strong>Mozilla</strong>, <strong>Red Hat</strong>, <strong>Samsung</strong>, <strong>SoftAtHome</strong> and <strong>Sony</strong>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -304,10 +304,11 @@
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
                         <li>Maksim Sisov</li>
                         <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
+                        <li>Mario Sánchez Prada <a href="https://twitter.com/mariospr" title="@mariospr"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="https://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
-                        <li>Michael Catanzaro</li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Michael Catanzaro</li>
                         <li>Michael Unisaer</li>
                         <li>Miguel Gómez</li>
                         <li>Ms2ger <a href="https://twitter.com/Ms2ger" title="@Ms2ger"><i class="fa fa-twitter"></i></a></li>
