Update attendees list

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <li>Michael Unisaer</li>
                         <li>Miguel Gómez</li>
                         <li>Ms2ger <a href="https://twitter.com/Ms2ger" title="@Ms2ger"><i class="fa fa-twitter"></i></a></li>
-                        <li>Olivier Blin</li>
+                        <li>Olivier Blin <a href="https://twitter.com/blino" title="@blino"><i class="fa fa-twitter"></i></a></li>
                         <li>Philip Jägenstedt <a href="https://twitter.com/foolip" title="@foolip"><i class="fa fa-twitter"></i></a></li>
                         <li>Philippe Normand <a href="https://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
                         <li>Raphael Kubo da Costa</li>
