--- a/index.html
+++ b/index.html
@@ -720,8 +720,8 @@
             </div>
         </div>
     </div>
-    <!-- Salva talk -->
-    <div class="portfolio-modal modal fade" id="talkModalSalva" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Diego & Salva talk -->
+    <div class="portfolio-modal modal fade" id="talkModalDiegoSalva" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
