--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4><a href="#talkModalAntonioMaksim" class="portfolio-link" data-toggle="modal">The Chromium/Wayland project</a></h4>
-                        <p class="text-muted">by Anotnio Gomes <a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a> &amp; Maksim Sisov</p>
+                        <p class="text-muted">by Anotnio Gomes <a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a> &amp; Maksim Sisov <a href="http://twitter.com/maksim_sisov" title="@maksim_sisov"><i class="fa fa-twitter"></i></a></p>
                     </div>
                 </div>
             </div>
@@ -317,7 +317,7 @@
                         <li>Josh Wolfe</li>
                         <li>Kevin Ngo <a href="https://twitter.com/andgokevin" title="@andgokevin"><i class="fa fa-twitter"></i></a></li>
                         <li>Lorenzo Tilve <a href="https://twitter.com/ltilve" title="@ltilve"><i class="fa fa-twitter"></i></a></li>
-                        <li>Maksim Sisov</li>
+                        <li>Maksim Sisov <a href="http://twitter.com/maksim_sisov" title="@maksim_sisov"><i class="fa fa-twitter"></i></a></li>
                         <li>Manuel Rego <a href="https://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Mario Sánchez Prada <a href="https://twitter.com/mariospr" title="@mariospr"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="https://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
@@ -647,7 +647,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                         	<h2>The Chromium/Wayland project</h2>
-                        	<p class="item-intro text-muted">by Anotnio Gomes <a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a> &amp; Maksim Sisov</p>
+                        	<p class="item-intro text-muted">by Anotnio Gomes <a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a> &amp; Maksim Sisov <a href="http://twitter.com/maksim_sisov" title="@maksim_sisov"><i class="fa fa-twitter"></i></a></p>
                             <ul class="list-inline">
                                 <li>Slides: <a href="slides/the-chromium-wayland-project-by-antonio-gomes-and-maksim-sisov.pdf">PDF</a></li>
                             </ul>
