Publish Philip's talk

--- a/index.html
+++ b/index.html
@@ -590,7 +590,9 @@
                         <div class="modal-body">
                         	<h2>Improving interop with web-platform-tests</h2>
                         	<p class="item-intro text-muted">by Philip Jägenstedt <a href="http://twitter.com/foolip" title="@foolip"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/mlLycN8LqD8?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/mlLycN8LqD8?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4">YouTube</a></li>
                                 <li>Slides: <a href="slides/improving-interop-with-web-platform-tests-by-philip-jagenstedt.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
