Publish Adenilson's talk

--- a/index.html
+++ b/index.html
@@ -621,7 +621,9 @@
                         <div class="modal-body">
                         	<h2>Optimizing zlib for ARM</h2>
                         	<p class="item-intro text-muted">by Adenilson Cavalcanti <a href="http://twitter.com/adenilsonc" title="@adenilsonc"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/lGo7nOx4A24?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/lGo7nOx4A24?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4">YouTube</a></li>
                                 <li>Slides: <a href="slides/optimizing-zlib-for-arm-by-adenilson-cavalcanti.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
