Publish Antonio & Maksim talk

--- a/index.html
+++ b/index.html
@@ -652,7 +652,9 @@
                         <div class="modal-body">
                         	<h2>The Chromium/Wayland project</h2>
                         	<p class="item-intro text-muted">by Antonio Gomes <a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a> &amp; Maksim Sisov <a href="http://twitter.com/maksim_sisov" title="@maksim_sisov"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/efmYPFHnaSM?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/efmYPFHnaSM?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4">YouTube</a></li>
                                 <li>Slides: <a href="slides/the-chromium-wayland-project-by-antonio-gomes-and-maksim-sisov.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
