Publish Dan's talk

--- a/index.html
+++ b/index.html
@@ -683,7 +683,9 @@
                         <div class="modal-body">
                         	<h2>BigInt: Integers as big as you want in JavaScript</h2>
                             <p class="item-intro text-muted">by Daniel Ehrenberg <a href="http://twitter.com/littledan" title="@littledan"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/58qyMBl9e28?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/58qyMBl9e28?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4">YouTube</a></li>
                                 <li>Slides: <a href="https://webengineshackfest.org/slides/bigint-integers-as-big-as-you-want-in-javascript-by-daniel-ehrenberg.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
