Publish Alex and Youenn talk

--- a/index.html
+++ b/index.html
@@ -714,7 +714,9 @@
                         <div class="modal-body">
                         	<h2>WebRTC(s) in WebKit(s)!</h2>
                             <p class="item-intro text-muted">by Alejandro G. Castro <a href="http://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a> &amp; Youenn Fablet</p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/8AbO9NrLtbQ?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/8AbO9NrLtbQ?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4">YouTube</a></li>
                                 <li>Slides: <a href="https://webengineshackfest.org/slides/webrtcs-in-webkits-by-alex-garcia-castro-and-youenn-fablet.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
