--- a/index.html
+++ b/index.html
@@ -745,7 +745,9 @@
                         <div class="modal-body">
                         	<h2>Challenges of the VR Web</h2>
                             <p class="item-intro text-muted">by Salvador de la Puente <a href="http://twitter.com/salvadelapuente" title="@salvadelapuente"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/HSDKBS1BR1k?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/HSDKBS1BR1k?list=PL4sEzdAGvRgDWjpudPPN38xjUpbXfOiW4">YouTube</a></li>
                                 <li>Slides: <a href="https://webengineshackfest.org/slides/challenges-of-the-vr-web-by-diego-marcos-and-salvador-de-la-puente.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
