--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
                     <h3 class="text-muted text-lowercase"><i class="fa fa-twitter fa-fw"></i><a href="http://twitter.com/webhackfest">@webhackfest</a></h3>
-                    <h3 class="text-muted text-lowercase"><i class="fa fa-envelope-o fa-fw"></i><a href="mailto:hackfest@webengineshackfest.org">hackfest@webengineshackfest.org</a></h3>
+                    <h3 class="text-muted text-lowercase longmail"><i class="fa fa-envelope-o fa-fw"></i><a href="mailto:hackfest@webengineshackfest.org">hackfest@webengineshackfest.org</a></h3>
                     <h3 class="text-muted text-lowercase"><i class="fa fa-phone fa-fw"></i>+34 981 913 991</h3>
                 </div>
             </div>
