--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Travel and Accommodation</h2>
+                    <h2 class="section-heading longtitle">Travel and Accommodation</h2>
                 </div>
             </div>
             <div class="row text-center">
