--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="description" content="Hacking oriented invitation-only event. Involving members from all parts of the Open Web Platform community, including those who work on Chromium/Blink, WebKit, Firefox/Gecko, and Servo.">
 <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, open web platform, open web hackfest, chromium hackfest, blink hackfest, safari hackfest, webkit hackfest, firefox hackfest, gecko hackfest, servo hackfest, chromium, blink, safari, webkit, firefox, gecko, servo">
 
-<meta http-equiv="refresh" content="0;URL='2018/index.html'" />
+<meta http-equiv="refresh" content="0;URL='https://webengineshackfest.org/2018/'" />
 
 <p>This page has been moved to <a href="https://webengineshackfest.org/2018/">https://webengineshackfest.org/2018/</a>.</p>
 <script>
