deploy: ca55a1eed2ab42e01910007b28077260d70d8d06

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>2024 Web Engines Hackfest</title>
 
+    <link rel="icon" href="/img/favicon.ico" />
     <link href="css/style.css" rel="stylesheet" />
 
     <!-- Custom Fonts -->
