deploy: 489ae3299efed680bdd68e9b08922436a8f38f45

--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <ul>
 <li>Aapo Alasuutari</li>
 <li>Andreu Botella</li>
+<li>Anne van Kesteren</li>
 <li>Artem Kobzar</li>
+<li>Carlos Bentzen</li>
 <li>Daniel Kolesa</li>
 <li>Keith Cirkel</li>
 <li>Leo Kettmeir</li>
