deploy: 3d5d5f309394d82d1edbebc555c21de8ce1219cd

--- a/index.html
+++ b/index.html
@@ -255,11 +255,13 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
 <li>mayask</li>
+<li>Mukilan Thiyagarajan</li>
 <li>Nicolò Ribaudo</li>
 <li>Pablo Saavedra</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
 <li>snek</li>
+<li>Tiaan Louw</li>
 <li>Vadim Makeev</li>
 </ul>
 </div>
