deploy: 9992c580d8b25a6c6548071dbee405fe0e812b33

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web Platform community event for people working on the different engines (Chromium/Blink/V8, Safari/WebKit/JSC, Firefox/Gecko/SpiderMonkey, Servo), on the testing side (WPT, Test262), or on specifications (W3C, WhatWG, TC39)." />
-    <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, web platform, open web platform, open web hackfest, open web, chromium, blink, v8, safari, webkit, jsc, firefox, gecko, spidermonkey, servo, wpt, test262, w3c, whatwg, tc39" />
-    <meta name="author" content="Igalia" />
-
-    <title>2024 Web Engines Hackfest</title>
-
-    <link rel="icon" href="/favicon.ico" />
-    <link href="css/style.css" rel="stylesheet" />
-
-    <!-- Custom Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Noto+Emoji:wght@400;700&family=Roboto+Slab:wght@400;700&family=Droid+Serif:wght@400&display=swap" rel="stylesheet">
-
-  </head>
   <body>
+    <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Web Platform community event for people working on the different engines (Chromium/Blink/V8, Safari/WebKit/JSC, Firefox/Gecko/SpiderMonkey, Servo), on the testing side (WPT, Test262), or on specifications (W3C, WhatWG, TC39)." />
+  <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, web platform, open web platform, open web hackfest, open web, chromium, blink, v8, safari, webkit, jsc, firefox, gecko, spidermonkey, servo, wpt, test262, w3c, whatwg, tc39" />
+  <meta name="author" content="Igalia" />
+
+  <title>2024 Web Engines Hackfest</title>
+
+  <link rel="icon" href="/favicon.ico" />
+  <link href="/css/style.css" rel="stylesheet" />
+
+  <!-- Custom Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Noto+Emoji:wght@400;700&family=Roboto+Slab:wght@400;700&family=Droid+Serif:wght@400&display=swap" rel="stylesheet">
+
+</head>
 
     <nav>
       <ul>
