deploy: ebdef6e8250169c552cfa6a845111750259ad476

--- a/sponsoring/index.html
+++ b/sponsoring/index.html
@@ -34,7 +34,7 @@
         <div class="section-wrapper">
           <h2>Sponsoring Packages</h2>
 <h3>Levels</h3>
-<h4>Gold Sponsor: 5,000 EUR - Igalia</h4>
+<h4>Gold Sponsor: 5,000 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -47,7 +47,7 @@
 </ul>
 </li>
 </ul>
-<h4>Silver Sponsor: 2,500 EUR - Arm</h4>
+<h4>Silver Sponsor: 2,500 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -87,7 +87,7 @@
 </li>
 </ul>
 <div class="sold" >
-<h4>Coffee &amp; Snacks Sponsor: 2,500 EUR - Arm (SOLD)</h4>
+<h4>Coffee &amp; Snacks Sponsor: 2,500 EUR (SOLD)</h4>
 <ul>
 <li>Description: Provide coffee &amp; snacks for people attending the hackfest.</li>
 <li>Benefits:
