deploy: 170743bb40609cf44f7aa65af6f5cb2c52dc58fb

--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Artem Kobzar</li>
 <li>Carlos Bentzen</li>
 <li>Daniel Kolesa</li>
+<li>Giorgio Maone</li>
 <li>Keith Cirkel</li>
+<li>Javier Fernandez Garcia-Boente</li>
 <li>Leo Kettmeir</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
