--- a/index.html
+++ b/index.html
@@ -245,15 +245,18 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <h2>Attendees</h2>
 <ul>
 <li>Aapo Alasuutari</li>
+<li>Andrei Svistunou</li>
 <li>Andreu Botella</li>
 <li>Anne van Kesteren</li>
 <li>Artem Kobzar</li>
 <li>Carlos Bentzen</li>
+<li>Daniel Ehrenberg</li>
 <li>Daniel Kolesa</li>
-<li>Giorgio Maone</li>
 <li>Keith Cirkel</li>
 <li>Javier Fernandez Garcia-Boente</li>
+<li>Jonas Kruckenberg</li>
 <li>Leo Kettmeir</li>
+<li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
 <li>mayask</li>
