deploy: daec91e9d3b77c2b6bbd8c230061521b255598df

--- a/index.html
+++ b/index.html
@@ -252,9 +252,11 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Carlos Bentzen</li>
 <li>Daniel Ehrenberg</li>
 <li>Daniel Kolesa</li>
+<li>Dave Vandyke</li>
 <li>Keith Cirkel</li>
 <li>Javier Fernandez Garcia-Boente</li>
 <li>Jonas Kruckenberg</li>
+<li>Jonathan Kingston</li>
 <li>Leo Kettmeir</li>
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
