deploy: 2275031167fb820d43823381af02206a92f46c22

--- a/index.html
+++ b/index.html
@@ -249,14 +249,17 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Andreu Botella</li>
 <li>Anne van Kesteren</li>
 <li>Artem Kobzar</li>
+<li>Bernd Kaiser</li>
 <li>Carlos Bentzen</li>
 <li>Daniel Ehrenberg</li>
 <li>Daniel Kolesa</li>
 <li>Dave Vandyke</li>
-<li>Keith Cirkel</li>
+<li>Emilio Cobos</li>
 <li>Javier Fernandez Garcia-Boente</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kingston</li>
+<li>Jon Kuperman</li>
+<li>Keith Cirkel</li>
 <li>Leo Kettmeir</li>
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
