--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <h2>Attendees</h2>
 <ul>
 <li>Aapo Alasuutari</li>
+<li>Alejandro G. Castro</li>
 <li>Andrei Svistunou</li>
 <li>Andreu Botella</li>
 <li>Anne van Kesteren</li>
@@ -255,6 +256,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Daniel Kolesa</li>
 <li>Dave Vandyke</li>
 <li>Emilio Cobos</li>
+<li>Guillaume Emont</li>
 <li>Javier Fernandez Garcia-Boente</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kingston</li>
@@ -266,7 +268,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Manuel Rego</li>
 <li>mayask</li>
 <li>Mukilan Thiyagarajan</li>
+<li>Nico Burns</li>
 <li>Nicolò Ribaudo</li>
+<li>Olivier Tilloy</li>
 <li>Pablo Saavedra</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
